plugins {
	id 'org.springframework.boot' version '3.5.15' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'com.sopt'
version = '0.0.1-SNAPSHOT'

ext {
	springBootVersion = '3.5.15'
	springModulithVersion = '1.4.12'
}

subprojects {
	group = rootProject.group
	version = rootProject.version

	repositories {
		mavenCentral()
	}

	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	dependencyManagement {
		imports {
			mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
			mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
		}
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.compilerArgs += '-parameters'
	}
}
